--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -504,7 +504,7 @@ TiPhone:
 
 # Apple
 Apple:
-  regex: '(?:iTunes-)?Apple[ _]?TV|(?:Apple-|iTunes-)?(?<!like )(?:iPad|iPhone)|iPh[0-9],[0-9]|CFNetwork|HomePod|watchOS|Watch OS|Watch1,[12]'
+  regex: '(?:iTunes-)?Apple[ _]?TV|(?:Apple-|iTunes-)?(?<!like )(?:iPad|iPhone)|iPh[0-9],[0-9]|CFNetwork|HomePod|Watch ?OS|Watch1,[12]'
   models:
     - regex: 'HomePod'
       device: 'smart speaker'
@@ -542,29 +542,13 @@ Apple:
       device: 'wearable'
       model: 'Watch Series 3 42mm'
 
-    - regex: 'Watch4,[13]'
+    - regex: 'Watch([456]),[13]'
       device: 'wearable'
-      model: 'Watch Series 4 40mm'
+      model: 'Watch Series $1 40mm'
 
-    - regex: 'Watch4,[24]'
+    - regex: 'Watch([456]),[24]'
       device: 'wearable'
-      model: 'Watch Series 4 44mm'
-
-    - regex: 'Watch5,[13]'
-      device: 'wearable'
-      model: 'Watch Series 5 40mm'
-
-    - regex: 'Watch5,[24]'
-      device: 'wearable'
-      model: 'Watch Series 5 44mm'
-
-    - regex: 'Watch6,[13]'
-      device: 'wearable'
-      model: 'Watch Series 6 40mm'
-
-    - regex: 'Watch6,[24]'
-      device: 'wearable'
-      model: 'Watch Series 6 44mm'
+      model: 'Watch Series $1 44mm'
 
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
