feat(device) detect new brand Bkav models: Bphone B1115, Bphone B1114, Bphone B2017 feat(device) detect new brand Bigben model: GameTab-One feat(device) detect new brand Brandt models: BPRIME, BSTAR, BSTAR+, BPRIMES, B-ONE feat(device) detect new brand Thuraya model: X5-Touch feat(device) detect brand Wortmann model: Terra Pad 1005 feat(device) detect brand Black Fox model: BMM 532S

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2473,7 +2473,7 @@ Bluboo:
 
 # Black Fox
 'Black Fox':
-  regex: 'BMM[ _-]?(?:44[123]D|44[12]S|431D|533D|54[12]S|541[ABW]|54[123]D|543S|531[ABD])(?:[);/ ]|$)'
+  regex: 'BMM[ _-]?(?:44[123]D|44[12]S|431D|533D|54[12]S|541[ABW]|54[123]D|543S|531[ABD]|532 S)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'BMM443D'
@@ -2504,6 +2504,8 @@ Bluboo:
       model: 'B3'
     - regex: 'BMM541W'
       model: 'B7R Fox'
+    - regex: 'BMM 532 S'
+      model: 'BMM 532S'
     - regex: 'BMM[ _-]?(533D|431D|54[12]S)(?:[);/ ]|$)'
       model: 'BMM $1'
 
@@ -17865,11 +17867,11 @@ Bobarry:
   device: 'tablet'
   model: 'K10 SE'
 
-# Wortmann
+# Wortmann (wortmann.de)
 Wortmann:
-  regex: 'TERRA PAD 1004(?:[);/ ]|$)'
+  regex: 'TERRA[ _]PAD[ _](100[45])(?:[);/ ]|$)'
   device: 'tablet'
-  model: 'Terra Pad 1004'
+  model: 'Terra Pad $1'
 
 # BB Mobile
 BB Mobile:
@@ -18782,6 +18784,30 @@ Zebra:
   regex: ' (TC5[16]|TC2[05]|TC75|TC7[05]x|TC700H)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# Thuraya (thuraya.com)
+Thuraya:
+  regex: 'Thuraya[ _](X5-Touch)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
+# Bkav (bkav.com)
+Bkav:
+  regex: 'Bphone[ _](B111[45]|B2017)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'Bphone $1'
+
+# Brandt
+Brandt:
+  regex: '(BPRIME|BSTAR\+?|BPRIMES|B-ONE)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
+# Bigben
+Bigben:
+  regex: 'GAMETAB-ONE(?:[);/ ]|$)'
+  device: 'tablet'
+  model: 'GameTab-One'
 
 # Leff
 Leff:
