--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6183,7 +6183,7 @@ Huawei:
       model: 'Honor 8X'
     - regex: 'ARE-(?:AL[10]0|L22HN|TL00)(?:[);/ ]|$)'
       model: 'Honor 8X Max'
-    - regex: 'STF-(?:AL[10]0|L09|TL10)(?:[);/ ]|$)'
+    - regex: 'STF-(?:AL[10]0|L09S?|TL10)(?:[);/ ]|$)'
       model: 'Honor 9'
     - regex: 'MOA-LX9N(?:[);/ ]|$)'
       model: 'Honor 9A'
@@ -8553,7 +8553,7 @@ LG:
       model: 'G4s'
     - regex: 'LG-H735'
       model: 'G4 Beat'
-    - regex: 'LG-H8(?:20|30|5[08]|60)|VS987|RS988'
+    - regex: 'LG-H8(?:20|3[01]|5[08]|60)|VS987|RS988'
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
@@ -14431,7 +14431,7 @@ Verykool:
 
 # Vestel (vestel.com)
 Vestel:
-  regex: 'Vestel[ _]|Venus[ _](GO|E[234]|V[1-9]|Z[1-9]0)|V_?TAB|VP74|VT97PRO|VSP145M|VSP250[GS]|VSP355[GS]|V3_5580_Dual'
+  regex: 'Vestel[ _]|Venus[ _](GO|E[2-5]|V[1-9]|Z[1-9]0)|V_?TAB|VP74|VT97PRO|VSP145M|VSP250[GS]|VSP355[GS]|V3_5580_Dual'
   device: 'smartphone'
   models:
     - regex: 'VT97PRO'
@@ -14471,7 +14471,7 @@ Vestel:
       model: 'Venus E2 Plus Dual'
     - regex: 'Venus[ _]E2 Plus'
       model: 'Venus E2 Plus'
-    - regex: 'Venus[ _]E([34])'
+    - regex: 'Venus[ _]E([345])'
       model: 'Venus E$1'
     - regex: 'Vestel_5000_Dual'
       model: '5000 Dual'
@@ -18761,13 +18761,16 @@ BioRugged:
 
 # SPC or SPC Universe or SPC Mobile (spc.es)
 SPC:
-  regex: '(?:Gravity Max|GRAVITY_OCTACORE)(?:[);/ ]|$)'
+  regex: '(?:Gravity Max|GRAVITY_OCTACORE|SPC SMART LITE)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'GRAVITY_OCTACORE'
       model: 'Gravity OctaCore'
     - regex: 'Gravity Max'
       model: 'Gravity Max'
+    - regex: 'SPC SMART LITE'
+      device: 'smartphone'
+      model: 'Smart Lite'
 
 # Winmax (winmaxmobile.com)
 Winmax:
