feat(device) detect brand Lenovo model: Tab E8 (TB-8304F1) feat(device) detect brand Asus model: Chromebook Flip C101PA feat(device) detect brand Logicom model: La Tab 105 feat(device) detect brand Motorola model: Moto E5 Play feat(device) detect brand Kalley model: Element Pro 2 feat(device) detect brand LG K11 (LM-X410(FG))

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2230,7 +2230,7 @@ Asus:
     - regex: '(?:Asus|Transformer) ((?:Pad |Prime )?TF[0-9a-z]+)'
       device: 'tablet'
       model: 'Transformer $1'
-    - regex: 'Chromebook Flip (C100PA|C302)'
+    - regex: 'Chromebook Flip (C10[01]PA|C302)'
       device: 'desktop'
       model: 'Chromebook Flip $1'
 
@@ -7482,11 +7482,13 @@ Just5:
 
 # Kalley (www.kalley.com.co)
 Kalley:
-  regex: '(?:ELEMENT Q|K-BOOK(?:8MG|73G))(?:[);/ ]|$)'
+  regex: '(?:ELEMENT Q|ELEMENT_PRO_2|K-BOOK(?:8MG|73G))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'ELEMENT Q'
       model: 'Element Q'
+    - regex: 'ELEMENT_PRO_2'
+      model: 'Element Pro 2'
     - regex: 'K-BOOK(8MG|73G)'
       device: 'tablet'
       model: 'K-BOOK$1'
@@ -8269,6 +8271,9 @@ Lenovo:
     - regex: 'TB-7104I(?:[);/ ]|$)'
       model: 'Tab E7'
       device: 'tablet'
+    - regex: 'TB-8304F1(?:[);/ ]|$)'
+      model: 'Tab E8'
+      device: 'tablet'
     - regex: 'TB-7304X(?:[);/ ]|$)'
       model: 'Tab 7 Essential'
       device: 'tablet'
@@ -8641,7 +8646,7 @@ LG:
       model: 'X4'
     - regex: 'LM-X(415[LS]|410L)'
       model: 'X4+'
-    - regex: 'LM-X410\.FN'
+    - regex: 'LM-X410(?:\.FN|\(FG\))'
       model: 'K11'
     - regex: 'LM-X(?:320|410[UP]M)'
       model: 'K30'
@@ -8846,11 +8851,11 @@ Lingwin:
 
 # Logicom
 Logicom:
-  regex: 'LOGICOM[_ ]|(TAB950|TAB1062|E731|E812|E912|E1031|POWER BOT|La Tab 72|(?:B|C|M|ID|VR)[ _]?BOT[ _]?(?:TAB[ _])?([0-9]+\+?)(?:PLUS)?|KT712A_4\.4|L-?IXIR[0-9]*|L-ITE|L-EGANTONE-R|L-?EMENT|L-EMENT551|Le[ _]?(?:Hop|Lift|Hola|Moov[2]?|Must 2|Fit FR|Spark|Prime|Smooth(?: FR)?))[_);/ ]'
+  regex: 'LOGICOM[_ ]|(TAB950|TAB1062|E731|E812|E912|E1031|POWER BOT|La Tab (?:72|105)|(?:B|C|M|ID|VR)[ _]?BOT[ _]?(?:TAB[ _])?([0-9]+\+?)(?:PLUS)?|KT712A_4\.4|L-?IXIR[0-9]*|L-ITE|L-EGANTONE-R|L-?EMENT|L-EMENT551|Le[ _]?(?:Hop|Lift|Hola|Moov[2]?|Must 2|Fit FR|Spark|Prime|Smooth(?: FR)?))[_);/ ]'
   device: 'tablet'
   models:
-    - regex: 'La Tab 72'
-      model: 'La Tab 72'
+    - regex: 'La Tab (72|105)(?:[);/ ]|$)'
+      model: 'La Tab $1'
     - regex: 'LOGICOM_LA_TAB_LINK_71'
       model: 'La Tab Link 71'
     - regex: 'KT712A_4.4'
@@ -9742,8 +9747,10 @@ Motorola:
       model: 'Moto E'
     - regex: '(?:MOT-|Motorola-)?XT1706'
       model: 'Moto E3 Power'
-    - regex: '(?:MOT-|Motorola-)?XT1924-9'
+    - regex: '(?:MOT-|Motorola-)?XT1924-9|moto e5 plus'
       model: 'Moto E5 Plus'
+    - regex: 'Moto E5 Play'
+      model: 'Moto E5 Play'
     - regex: '(?:MOT-|Motorola-)?XT1030'
       model: 'Droid Mini'
     - regex: '(?:MOT-|Motorola-)?XT1096'
