--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8851,10 +8851,10 @@ Lingwin:
 
 # Logicom
 Logicom:
-  regex: 'LOGICOM[_ ]|(TAB950|TAB1062|E731|E812|E912|E1031|POWER BOT|La Tab (?:72|105)|(?:B|C|M|ID|VR)[ _]?BOT[ _]?(?:TAB[ _])?([0-9]+\+?)(?:PLUS)?|KT712A_4\.4|L-?IXIR[0-9]*|L-ITE|L-EGANTONE-R|L-?EMENT|L-EMENT551|Le[ _]?(?:Hop|Lift|Hola|Moov[2]?|Must 2|Fit FR|Spark|Prime|Smooth(?: FR)?))[_);/ ]'
+  regex: 'LOGICOM[_ ]|(TAB950|TAB1062|E731|E812|E912|E1031|POWER BOT|La[ _]Tab[ _](?:7[24]|10[57]|114)|(?:B|C|M|ID|VR)[ _]?BOT[ _]?(?:TAB[ _])?([0-9]+\+?)(?:PLUS)?|KT712A_4\.4|L-?IXIR[0-9]*|L-ITE|L-EGANTONE-R|L-?EMENT|L-EMENT551|Le[ _]?(?:Hop|Lift|Hola|Moov[2]?|Must 2|Fit FR|Spark|Prime|Smooth(?: FR)?))[_);/ ]'
   device: 'tablet'
   models:
-    - regex: 'La Tab (72|105)(?:[);/ ]|$)'
+    - regex: 'La[ _]Tab[ _](7[24]|10[57]|114)(?:[);/ ]|$)'
       model: 'La Tab $1'
     - regex: 'LOGICOM_LA_TAB_LINK_71'
       model: 'La Tab Link 71'
@@ -8866,7 +8866,7 @@ Logicom:
       model: 'L-ixir Tab $1'
     - regex: 'L-ITE[ _]([^;/]+) Build'
       model: 'L-ite Tab $1'
-    - regex: 'L-EMENT ?(400|551)(?:[);/ ]|$)'
+    - regex: 'L-EMENT[ _]?(40[03]|55[13]|505)(?:[);/ ]|$)'
       model: 'L-ement $1'
       device: 'smartphone'
     - regex: 'L-?EMENT[ _](?:TAB)?([^;/]+) Build'
@@ -11281,7 +11281,7 @@ Pioneer:
 
 # Pixus
 Pixus:
-  regex: 'Pixus|(Ride[_ ][34]G|Play[ _]Three[ _]v(?:[24].0|3.1))(?:[);/ ]|$)'
+  regex: 'Pixus|(hiPower|Ride[_ ][34]G|Play[ _]Three[ _]v(?:[24].0|3.1))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'Ride[_ ]([34])G'
@@ -11292,6 +11292,8 @@ Pixus:
       model: 'Play Two'
     - regex: 'Play Five'
       model: 'Play Five'
+    - regex: 'hiPower'
+      model: 'hiPower'
     - regex: 'Pixus[ _]Sprint'
       model: 'Sprint'
     - regex: 'Touch 7 3G'
@@ -17216,11 +17218,11 @@ iGet:
 
 # iVA
 iVA:
-  regex: '(LAMCY L350|IVA S6)(?:[);/ ]|$)'
+  regex: '(LAMCY (?:L3[05]0|C100|L400)|IVA S6)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'LAMCY L350(?:[);/ ]|$)'
-      model: 'Lamcy L350'
+    - regex: 'LAMCY (L3[05]0|C100|L400)(?:[);/ ]|$)'
+      model: 'Lamcy $1'
     - regex: 'IVA S6(?:[);/ ]|$)'
       model: 'S6'
 
