feat(device) detect new brand Artizlee models: S9, ATL-16, ATL-21, ATL-21 Plus, ATL-21T, ATL-31, ATL-26, ATL-21X feat(device) detect new brand Asanzo models: A2, S2, S3, Z5, S5, S3 Plus feat(device) detect new brand SMARTEC model: Atractivo

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18825,6 +18825,35 @@ Bigben:
   device: 'tablet'
   model: 'GameTab-One'
 
+# smartec (smartec.tn)
+SMARTEC:
+  regex: '(Atractivo)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
+# Asanzo (asanzo.vn)
+Asanzo:
+  regex: 'ASANZO[ _](?:A2|S[23]|[SZ]5|S3_PLUS)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'ASANZO[ _]S3[ _]PLUS'
+      model: 'S3 Plus'
+    - regex: 'ASANZO[ _](A2|S[23]|[SZ]5)(?:[);/ ]|$)'
+      model: '$1'
+
+# Artizlee
+Artizlee:
+  regex: 'Artizlee[ _]S9|ATL-(?:16|21(?:PLUS|[XT])?|31|26)(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: 'ATL-21PLUS(?:[);/ ]|$)'
+      model: 'ATL-21 Plus'
+    - regex: '(ATL-(?:16|21[XT]?|31|26))(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'Artizlee[ _]S9'
+      device: 'smartphone'
+      model: 'S9'
+
 # Leff
 Leff:
   regex: 'Leff Shell (?:HV320WHB-N55|LC390TA2A)(?:[);/ ]|$)'
