feat(device) detect new brand Mintt models: CoolMintt M1, CoolMintt P1, CoolMintt P3,  UltraMintt R1, CoolMintt A3, UltraMintt S1, CoolMintt M2, UltraMintt S2, FreshMintt A7,  FreshMintt A10 feat(device) detect brand Accent models: Cameleon C5, Cameleon C6, Cameleon C6 Plus feat(device) detect brand Contixo models: KT109 4G 10.1", KT1100GT, GT1160 4G 10.1"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17516,16 +17516,22 @@ Contixo:
       model: 'CX-1045 3G'
     - regex: 'CONTIXO GX 1035(?:[);/ ]|$)'
       model: 'GX-1035 4G 10.1"'
+    - regex: 'Contixo GT1160 4G(?:[);/ ]|$)'
+      model: 'GT1160 4G 10.1"'
     - regex: 'B105(?:[);/ ]|$)'
       model: 'B105 3G 10.1"'
     - regex: 'B108(?:[);/ ]|$)'
       model: 'B108 4G 10.1"'
     - regex: 'KT107(?: 3G)?(?:[);/ ]|$)'
       model: 'KT107 3G 10.1"'
+    - regex: 'K109(?:[);/ ]|$)'
+      model: 'KT109 4G 10.1"'
     - regex: 'KT715 3G(?:[);/ ]|$)'
       model: 'KT715 3G 7.0"'
     - regex: 'KT995(?:[);/ ]|$)'
       model: 'KT995 3G 10.1"'
+    - regex: 'KT1100GT(?:[);/ ]|$)'
+      model: 'KT1100GT'
 
 # E-Ceros
 'E-Ceros':
@@ -18266,9 +18272,15 @@ Nos:
 
 # Accent
 Accent:
-  regex: 'ACCENT_NEON(?:[);/ ]|$)'
+  regex: '(?:ACCENT[_ ]NEON|CAMELEON[_ ]C[56](?:[_ ]PLUS)?)(?:[);/ ]|$)'
   device: 'smartphone'
-  model: 'Neon'
+  models:
+    - regex: 'ACCENT[_ ]NEON(?:[);/ ]|$)'
+      model: 'Neon'
+    - regex: 'CAMELEON[_ ]C6[_ ]PLUS(?:[);/ ]|$)'
+      model: 'Cameleon C6 Plus'
+    - regex: 'CAMELEON[_ ]C([56])(?:[);/ ]|$)'
+      model: 'Cameleon C$1'
 
 # Avenzo (www.avenzo.es)
 Avenzo:
@@ -18853,6 +18865,19 @@ Artizlee:
     - regex: 'Artizlee[ _]S9'
       device: 'smartphone'
       model: 'S9'
+
+# Mintt
+Mintt:
+  regex: '(?:Coolmintt(?:A3|M2)?|Ultramintt(?:S2)?|FRESHMINTT(?:A7|A10)?)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Coolmintt ?([PM]1|P3|A3|M2)(?:[);/ ]|$)'
+      model: 'CoolMintt $1'
+    - regex: 'Ultramintt ?([SR]1|S2)(?:[);/ ]|$)'
+      model: 'UltraMintt $1'
+    - regex: 'FRESHMINTT ?(A7|A10)(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'FreshMintt $1'
 
 # Leff
 Leff:
