feat(device) detect brand Cherry Mobile models: Flare Y7 LTE, Flare Y7,  Flare Y3, Flare Y3 Mini, Flare Y3 Pro, Flare S7 Plus, Flare S7 Max

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3421,7 +3421,7 @@ Changhong:
 
 # Cherry Mobile
 'Cherry Mobile':
-  regex: 'Cherry|Flare([ _])?(2X|4|A[123]|J[1235]|P[13]|S[4568]|X2)|Flare[ _](?:S Play|S5 Plus|S5|HD_MAX|LITE|XL Plus|X_V2|Y[67]_Pro|Y3s|Tab)|Fusion Bolt|OMEGA HD 4'
+  regex: 'Cherry|Flare([ _])?(2X|4|A[123]|J[1235]|P[13]|S[4568]|X2|Y7_LTE|Y[73])|Flare[ _](?:S Play|S[57] Plus|S5|S7 Max|HD_MAX|LITE|XL Plus|X_V2|Y[67]_Pro|Y3s|Tab)|Fusion Bolt|OMEGA HD 4'
   device: 'smartphone'
   models:
     - regex: 'Cherry(?: ?Mobile)?[ _]?([^/;]+) Build'
@@ -3434,7 +3434,7 @@ Changhong:
       model: 'Flare Lite'
     - regex: 'Flare S Play'
       model: 'Flare S Play'
-    - regex: 'Flare_Y([67])_Pro'
+    - regex: 'Flare[_ ]Y([367])[_ ]Pro'
       model: 'Flare Y$1 Pro'
     - regex: 'Flare XL Plus'
       model: 'Flare XL Plus'
@@ -3442,23 +3442,21 @@ Changhong:
       model: 'Flare X V2'
     - regex: 'Flare[ _](A2|J3|P1|S[46])[ _]Lite'
       model: 'Flare $1 Lite'
-    - regex: 'Flare[ _](J[12]|S5)[ _]mini'
+    - regex: 'Flare[ _](J[12]|S5|Y3)[ _]mini'
       model: 'Flare $1 Mini'
     - regex: 'Flare J2S'
       model: 'Flare J2s'
     - regex: 'Flare S4 Max LTE'
       model: 'Flare S4 Max LTE'
-    - regex: 'Flare S4 Max'
-      model: 'Flare S4 Max'
+    - regex: 'Flare S([47]) Max'
+      model: 'Flare S$1 Max'
     - regex: 'FlareS5LiteDTV'
       model: 'Flare S5 Lite DTV'
-    - regex: 'Flare S5 Plus'
-      model: 'Flare S5 Plus'
-    - regex: 'Flare_S6_Plus'
-      model: 'Flare S6 Plus'
+    - regex: 'Flare[_ ]S([567])[_ ]Plus'
+      model: 'Flare S$1 Plus'
     - regex: 'FLARE S6 POWER'
       model: 'Flare S6 Power'
-    - regex: 'Flare(?:[ _])?(4|A[13]|J[135]|P[13]|S[4568]|X2|Y3s)'
+    - regex: 'Flare(?:[ _])?(4|A[13]|J[135]|P[13]|S[4568]|X2|Y3s|Y7_LTE|Y[73])'
       model: 'Flare $1'
     - regex: 'OMEGA HD 4'
       model: 'Omega HD 4'
