feat(device) detect brand Avvio model: Chivas 55 feat(device) detect brand Konrow model: City 55 feat(device) detect brand Clarmin model: C1 feat(device) detect brand Bush model: 10Nou feat(device) detect brand Blaupunkt model: SM 02 feat(device) detect brand Hometech models: ALFA 10RC, ALFA 7RS, ALFA 7M, ALFA 7RC, ALFA 8RC feat(device) detect brand Ace model: Clever 1, Urban 1, Urban 1 Pro, Buzz 1 feat(device) detect brand iPro model: Amber 6, Amber 7S, Amber 5S Pro feat(device) detect brand Mobicel: Blink, Berry 1, Berry 2, Berry Plus

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7,15 +7,21 @@
 
 # Ace or ACE France (www.acemobile.fr)
 Ace:
-  regex: '(?:BUZZ [12] (?:Lite|Plus)|BUZZ 2)(?:[);/ ]|$)'
+  regex: '(?:BUZZ [12]|BUZZ 2|CLEVER 1|URBAN 1(?: Pro)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'BUZZ ([12]) Lite'
       model: 'Buzz $1 Lite'
     - regex: 'BUZZ ([12]) Plus'
       model: 'Buzz $1 Plus'
-    - regex: 'BUZZ 2'
-      model: 'Buzz 2'
+    - regex: 'BUZZ ([12])'
+      model: 'Buzz $1'
+    - regex: 'CLEVER 1'
+      model: 'Clever 1'
+    - regex: 'URBAN 1 Pro'
+      model: 'Urban 1 Pro'
+    - regex: 'URBAN 1'
+      model: 'Urban 1'
 
 'Tunisie Telecom':
   regex: 'StarTrail TT(?:[);/ ]|$)'
@@ -2262,9 +2268,11 @@ AVH:
 
 # Avvio
 Avvio:
-  regex: 'Avvio[ _]?([a-z0-9\-]+)'
+  regex: 'Avvio[ _]?([a-z0-9\-]+)|CHIVAS_55(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: 'CHIVAS_55'
+      model: 'Chivas 55'
     - regex: 'Avvio[ _]PAD'
       model: 'PAD'
       device: 'tablet'
@@ -2867,7 +2875,7 @@ Blaupunkt:
       model: 'Atlantis $1'
     - regex: 'SLplus02'
       model: 'SL Plus 02'
-    - regex: 'Blaupunkt (SL 0[124]|SM 01)'
+    - regex: 'Blaupunkt[_ ](SL[_ ]0[124]|SM[_ ]0[12])'
       device: 'smartphone'
       model: '$1'
 
@@ -3294,9 +3302,12 @@ bq:
 
 # Bush
 Bush:
-  regex: 'Bush[ _-]'
+  regex: 'Bush[ _-]|Bush10Nou'
   device: 'smartphone'
   models:
+    - regex: 'Bush10Nou'
+      device: 'tablet'
+      model: '10Nou'
     - regex: 'BUSH ([^;/)]+)Tablet(?: Build|[);])'
       model: '$1Tablet'
       device: 'tablet'
@@ -3770,8 +3781,8 @@ Clarmin:
   regex: 'Clarmin'
   device: 'smartphone'
   models:
-    - regex: 'Clarmin_B6'
-      model: 'B6'
+    - regex: 'Clarmin[_ ](B6|C1)'
+      model: '$1'
 
 # Cricket
 Cricket:
@@ -7054,7 +7065,7 @@ iNew:
 
 # iPro
 iPro:
-  regex: 'Kylin[ _]5.[05]|Jade7s'
+  regex: '(?:Kylin[ _]5.[05]S?|Jade7s|Amber[67]S?|Amber5S_Pro)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Kylin_5.0S'
@@ -7063,6 +7074,12 @@ iPro:
       model: 'Kylin $1'
     - regex: 'Jade7s'
       model: 'Jade 7s'
+    - regex: 'Amber7S'
+      model: 'Amber 7S'
+    - regex: 'Amber5S_Pro'
+      model: 'Amber 5S Pro'
+    - regex: 'Amber6'
+      model: 'Amber 6'
 
 
 # Infinix
@@ -8936,7 +8953,7 @@ Konka:
 
 # Konrow (konrow.com)
 Konrow:
-  regex: '(?:BIGCOOL|COOLFIVE|COOL-K|Just5|Link5|EASY5)(?:[);/ ]|$)'
+  regex: '(?:BIGCOOL|COOLFIVE|COOL-K|Just5|Link5|EASY5|CITY55)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'BIGCOOL(?:[);/ ]|$)'
@@ -8951,6 +8968,8 @@ Konrow:
       model: 'Link 5'
     - regex: 'EASY5(?:[);/ ]|$)'
       model: 'Easy 5'
+    - regex: 'CITY55(?:[);/ ]|$)'
+      model: 'City 55'
 
 # Karbonn (karbonnmobiles.com)
 Karbonn:
@@ -9511,11 +9530,19 @@ Mobiola:
 
 # Mobicel
 Mobicel:
-  regex: 'Mobicel_(R1)|(?:Matrix|TRENDY PLUS)(?:[);/ ]|$)'
+  regex: 'Mobicel_(R1)|(?:Matrix|TRENDY PLUS|BLINK|BERRY[_ ]?(?:[12]|PLUS))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Matrix'
       model: 'Matrix'
+    - regex: 'BLINK'
+      model: 'Blink'
+    - regex: 'BERRY1'
+      model: 'Berry 1'
+    - regex: 'BERRY 2'
+      model: 'Berry 2'
+    - regex: 'BERRY[_ ]PLUS'
+      model: 'Berry Plus'
     - regex: 'TRENDY PLUS'
       model: 'Trendy Plus'
     - regex: 'Mobicel_(R1)'
@@ -18568,10 +18595,10 @@ eSTAR:
 
 # Hometech
 Hometech:
-  regex: '(?:Ideal (?:10S|Tab [79])|HT[ _](?:7RT|8MZ))(?:[);/ ]|$)'
+  regex: '(?:Ideal (?:10S|Tab [79])|ALFA[_ ](?:10RC|7RS|[78]RC|7M)|HT[ _](?:7RT|8MZ))(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: '(Ideal (?:10S|Tab 9))'
+    - regex: '(Ideal (?:10S|Tab 9)|ALFA[_ ](?:10RC|7RS|[78]RC|7M))'
       model: '$1'
     - regex: 'Ideal Tab 7 Ips( 3G)?'
       model: 'Ideal Tab 7 IPS$1'
