feat(device) detect new brand Trifone model: Passion 1S, Passion Plus, Passion Pro feat(device) detect brand Lava model: Pixel V2 feat(device) detect brand Phonemax model: Venus X feat(device) detect brand Accent models: Pearl A7, Pearl A5, Pearl A2 feat(device) detect brand Plum models: Axe 4 (Z407), Compass (Z516), Optimax 7 (Z709), Optimax 12 (Z712), Optimax 11 (Z811)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7959,7 +7959,7 @@ AIS:
 
 # Lava (Lavamobiles.com)
 Lava:
-  regex: 'Lava[ _]|LAVAA1|(?:DISCOVER136|KKT QUADRA)|iris[ _]?([^/;]+)(?:\)| Build)|A(?:67|76) Build|X1 Selfie Build|X41 Plus Build|(?:Flair Z1|PixelV1|Z61_2GB|A97 IPS|L[EH]9920(?:[_ ]P)?|L[EH]9910)(?:[);/ ]|$)'
+  regex: 'Lava[ _]|LAVAA1|(?:DISCOVER136|KKT QUADRA)|iris[ _]?([^/;]+)(?:\)| Build)|A(?:67|76) Build|X1 Selfie Build|X41 Plus Build|(?:Flair Z1|PixelV1|Pixel V2|Z61_2GB|A97 IPS|L[EH]9920(?:[_ ]P)?|L[EH]9910)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Flair Z1(?:[);/ ]|$)'
@@ -7970,8 +7970,8 @@ Lava:
       model: 'A67'
     - regex: 'A76 Build'
       model: 'A76'
-    - regex: 'PixelV1(?:[);/ ]|$)'
-      model: 'Pixel V1'
+    - regex: 'Pixel ?V([12])(?:[);/ ]|$)'
+      model: 'Pixel V$1'
     - regex: 'X1 Selfie Build'
       model: 'Iris X1 Selfie'
     - regex: 'X41 Plus Build'
@@ -12963,13 +12963,26 @@ Ployer:
     - regex: 'MOMO([0-9][^);/]*)(?:[);/]|$)'
       model: 'MOMO $1'
 
-# Plum
+# Plum (plum-mobile.com)
 Plum:
-  regex: 'PLUM '
+  regex: 'PLUM[ _]'
   device: 'smartphone'
   models:
     - regex: 'Z405'
       model: 'Gator 3'
+    - regex: 'Z407'
+      model: 'Axe 4'
+    - regex: 'Z516'
+      model: 'Compass'
+    - regex: 'Z811'
+      device: 'tablet'
+      model: 'Optimax 11'
+    - regex: 'Z709'
+      device: 'tablet'
+      model: 'Optimax 7'
+    - regex: 'Z712'
+      device: 'tablet'
+      model: 'Optimax 12'
 
 # Polaroid
 Polaroid:
@@ -17817,7 +17830,7 @@ Asano:
 
 # Phonemax
 Phonemax:
-  regex: 'PHONEMAX[_ ](Saturn(?:[_ ]X)?|Mars)(?:[);/ ]|$)'
+  regex: 'PHONEMAX[_ ](Saturn(?:[_ ]X)?|Mars|Venus X)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'PHONEMAX[_ ]Saturn[_ ]X(?:[);/ ]|$)'
@@ -17826,6 +17839,8 @@ Phonemax:
       model: 'Saturn'
     - regex: 'PHONEMAX[_ ]Mars(?:[);/ ]|$)'
       model: 'Mars'
+    - regex: 'PHONEMAX[_ ]Venus X(?:[);/ ]|$)'
+      model: 'Venus X'
 
 # Vipro (Vipro Mobile)
 Vipro:
@@ -18305,9 +18320,9 @@ Nos:
     - regex: 'NOS Roya(?:[);/ ]|$)'
       model: 'Roya'
 
-# Accent
+# Accent (DBM Maroc) (accent.ma)
 Accent:
-  regex: '(?:ACCENT[_ ]NEON|CAMELEON[_ ]C[56](?:[_ ]PLUS)?)(?:[);/ ]|$)'
+  regex: '(?:ACCENT[_ ]NEON|PEARL[_ ]A[257]|CAMELEON[_ ]C[56](?:[_ ]PLUS)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'ACCENT[_ ]NEON(?:[);/ ]|$)'
@@ -18316,6 +18331,8 @@ Accent:
       model: 'Cameleon C6 Plus'
     - regex: 'CAMELEON[_ ]C([56])(?:[);/ ]|$)'
       model: 'Cameleon C$1'
+    - regex: 'PEARL[_ ]A([257])(?:[);/ ]|$)'
+      model: 'Pearl A$1'
 
 # Avenzo (www.avenzo.es)
 Avenzo:
@@ -18929,6 +18946,18 @@ Premio:
       model: 'P571'
     - regex: '186HS1050232'
       model: 'P630'
+
+# Trifone
+Trifone:
+  regex: 'Passion[-_](?:1S|PRO|PLUS)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Passion-1S'
+      model: 'Passion 1S'
+    - regex: 'Passion-Plus'
+      model: 'Passion Plus'
+    - regex: 'Passion_Pro'
+      model: 'Passion Pro'
 
 # Leff
 Leff:
