Improves detection of tvOS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1171,3 +1171,10 @@
     short_name: WAS
     version: 3.2.2
     platform: ARM
+-
+  user_agent: Mozilla/5.0 (Apple TV; U; CPU iPhone OS 10_1_1 like Mac OS X; en-US) FOX Sports GO/1160
+  os:
+    name: tvOS
+    short_name: ATV
+    version: 10.1.1
+    platform: ARM
