--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -303,7 +303,7 @@
 ##########
 # tvOS (https://developer.apple.com/tvos/)
 ##########
-- regex: 'Apple TV.*CPU iPhone ?OS ((?:9|10|11|12|13|14)_\d+(?:[_\.]\d+)*)'
+- regex: 'Apple TV.*CPU (?:iPhone )?OS ((?:9|10|11|12|13|14)_\d+(?:[_\.]\d+)*)'
   name: 'tvOS'
   version: '$1'
 
