Improves detection for Mobile Safari browser

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6617,3 +6617,16 @@
     model: Apple TV
   os_family: iOS
   browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (Apple TV; U; CPU iPhone OS 10_1_1 like Mac OS X; en-US) FOX Sports GO/1160
+  os:
+    name: tvOS
+    version: 10.1.1
+    platform: ARM
+  client: null
+  device:
+    type: tv
+    brand: Apple
+    model: Apple TV
+  os_family: iOS
+  browser_family: Unknown
