--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1836,7 +1836,7 @@
   version: '$1'
   engine:
     default: 'WebKit'
-- regex: '(?:iPod|iPhone|iPad)'
+- regex: '(?:iPod|(?<!Apple TV; U; CPU )iPhone|iPad)'
   name: 'Mobile Safari'
   version: ''
   engine:
