Improves detection for tvOS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1178,3 +1178,17 @@
     short_name: ATV
     version: 10.1.1
     platform: ARM
+-
+  user_agent: H443NM7F8H.CBSSportsApp/1.0 iOS/9.0 model/AppleTV5,3 build/13T393
+  os:
+    name: tvOS
+    short_name: ATV
+    version: "9.0"
+    platform: ARM
+-
+  user_agent: CBS_Sports;AppleTV;H443NM7F8H.CBSSportsApp/1.0 iOS/9.0 AppleTV/9.0 model/AppleTV5,3 hwp/t7000 build/13T5379f (3; dt:119)
+  os:
+    name: tvOS
+    short_name: ATV
+    version: "9.0"
+    platform: ARM
