--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -307,7 +307,7 @@
   name: 'tvOS'
   version: '$1'
 
-- regex: 'iOS; ((?:9|10|11|12|13|14).\d+(?:[_\.]\d+)*) AppleTV'
+- regex: 'iOS(?:; |/)((?:9|10|11|12|13|14).\d+(?:[_\.]\d+)*) (?:model/)?AppleTV'
   name: 'tvOS'
   version: '$1'
 
